syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service grpcSubscriber {
  rpc Subscribe (SubscribeRequest) returns (SubscribeReply);
}

message SubscribeRequest {
  string Topic = 1;
  string Address = 2;
}

message SubscribeReply {
  bool isSuccess = 1;
}